<resources>
    <string name="app_name">HootAndHwaat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="main_page">Main page</string>
    <string name="my_orders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="terms">Terms and condition</string>
    <string name="log_in">Log in</string>
    <string name="bew_acc">New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="fishes_offers">Fishes Offers</string>
    <string name="Buy">buy</string>
    <string name="cal_us">Call us</string>
    <string name="create_ad">Create ad</string>
    <string name="fish_name">Fish name</string>
    <string name="fishing_date">Fishing date</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="fishing_img">Image</string>
    <string name="delivery">Delivery</string>
    <string name="cooking">Cooking</string>
    <string name="Services">Services</string>
    <string name="boat_type">Boat type</string>
    <string name="sailing_date">Sailing date</string>
    <string name="from">From time</string>
    <string name="to_time">To time</string>
    <string name="sailing_period">Sailing period</string>
    <string name="description">Description</string>
    <string name="Reserve">Reserve</string>
    <string name="my_ads">My ads</string>
    <string name="address">address</string>
    <string name="vehicles">Vehicles</string>
    <string name="title_activity_create_ad">CreateAdActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fishes">Fishes</string>
    <string name="trips">Trips</string>
    <string name="my_vehicles">My vehicles</string>
    <string name="people_number">Peolple number</string>
    <string name="edit_profile">EditProfile</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="choose">Choose</string>
    <string name="customer">Customer</string>
    <string name="sailor">Sailor</string>
    <string name="Add">add</string>
    <string name="boat_name">Boat Name</string>
    <string name="mooring_name">Mooring name</string>
    <string name="laaf">Laaf</string>
    <string name="equipment">Equipment for diving</string>
    <string name="food">Food</string>
    <string name="juice">Juice</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="available_delivery">Delivery available</string>
    <string name="available_cooking">Available cooking</string>
    <string name="km">km</string>
    <string name="SR">SR</string>
    <string name="Ppassenfer">Passenger</string>
    <string name="sr">SR</string>
    <string name="passanfer_number">Passangers</string>
    <string name="passanger">Passanger</string>
    <string name="weight_by_kg">Weight by km</string>
    <string name="quantity">Quantity</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rehected</string>
    <string name="trips_orders">Trip orders</string>
    <string name="fishes_orders">Fishes orders</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="sign_in">Sign In</string>
    <string name="no_orders">No orders</string>
    <string name="no_vehicles">No vehicles</string>
    <string name="ok">OK</string>
    <string name="tickets_number">Tickets number</string>
    <string name="choose_image">Choose image</string>
    <string name="fill_all">Pleas Fill all fields</string>
</resources>
