<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/main_page" />

        <item
            android:id="@+id/nav_my_orders"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_vehicle"
            android:title="@string/vehicles" />

        <item
            android:id="@+id/nav_my_ads"
            android:title="@string/my_ads" />
        <item
            android:id="@+id/nav_trips_orders"
            android:title="@string/trips_orders" />
        <item
            android:id="@+id/nav_fishes_orders"
            android:title="@string/fishes_orders" />

        <item
            android:id="@+id/nav_client_trips_orders"
            android:title="@string/trips_orders" />
        <item
            android:id="@+id/nav_client_fishes_orders"
            android:title="@string/fishes_orders" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_call_us"
            android:title="@string/cal_us" />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/terms" />
        <item
            android:id="@+id/nav_out"
            android:title="@string/log_out" />

    </group>


</menu>
